--- a/web/wp-content/themes/deansluyter-theme/src/sass/components/_front-page-image.scss
+++ b/web/wp-content/themes/deansluyter-theme/src/sass/components/_front-page-image.scss
@@ -48,7 +48,7 @@
   overflow: hidden;
   position: relative;
   background-image: url("@assets/dean-portrait_028_v02.jpg");
-  // background-image:url("@assets/home page banner tweaked again.jpg");  
+  background-image:url("@assets/home page banner tweaked again.jpg");  
   // background-image: none;
   background-color: #2a231b;
   background-repeat: no-repeat;
