--- a/web/wp-content/plugins/deansluyter-blocks/src/blocks/media/style.scss
+++ b/web/wp-content/plugins/deansluyter-blocks/src/blocks/media/style.scss
@@ -1,64 +1,1 @@
-.wp-block-deansluyter-media.media {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1.5em;
-}
-
-.wp-block-deansluyter-media .media--image {
-  margin-bottom: 0.75em;
-}
-
-.wp-block-deansluyter-media .media--image img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.wp-block-deansluyter-media .media--title h3 {
-  margin: 0;
-}
-
-.wp-block-deansluyter-media .media--subtitle h4 {
-  margin: 0.5em 0 0 0;
-}
-
-.wp-block-deansluyter-media .media--date {
-  margin: 0;
-}
-
-.wp-block-deansluyter-media .media--date h4 {
-  margin: 0.5em 0 0 0;
-}
-
-.wp-block-deansluyter-media .media--length {
-  margin: 0 0 0.5em 0;
-}
-
-.wp-block-deansluyter-media .info-header {
-  background-color: rgba(49, 73, 98, 0.18);
-  padding: 0.5em;
-  margin-bottom: 1em;
-}
-
-.wp-block-deansluyter-media .info-body {
-  margin-left: 0.5em;
-}
-
-@media screen and (min-width: 600px) {
-  .wp-block-deansluyter-media.media {
-    flex-direction: row;
-  }
-
-  .wp-block-deansluyter-media .media--image {
-    flex: 1;
-    margin-bottom: 0;
-  }
-
-  .wp-block-deansluyter-media .media--info {
-    flex: 2;
-  }
-
-  .wp-block-deansluyter-media .media--info .inner {
-    padding-left: 1em;
-  }
-}
+// Styled in the theme.
