--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_block--media.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_block--media.scss
@@ -1,22 +1,67 @@
-.media--title h3 {
-  margin: 0;
-}
+.wp-block-deansluyter-media {
 
-.media--subtitle h4 {
-  margin: .5em 0 0 0;
-}
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
 
-.media--date {
-  margin: 0;
-  h4 {
-    margin: .5em 0 0 0;
+  @include breakpoint(600px) {
+    flex-direction: row;
   }
-}
 
-.media--description {
-  margin: 0 0 .5em 0;
-}
+  .media--image {
+    position: relative;
 
-.media--length {
-  margin: 0 0 .5em 0;
+    img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+ 
+    @include breakpoint(600px) {
+      flex: 1;
+      margin-bottom: 0;
+    }
+  }
+
+  .info-header {
+    background-color: rgba($color--header, .5);
+    padding: .4rem .5rem;
+    margin-bottom: 1rem;
+  }
+
+  .info-body {
+    padding-left: .5em;
+  }
+
+  .media--info {
+ 
+    @include breakpoint(600px) {
+      flex: 2;
+    }
+  }
+
+  .media--title h3 {
+    margin: 0;
+  }
+
+  .media--subtitle h4 {
+    margin: .5rem 0 0 0;
+  }
+
+  .media--date {
+    margin: 0;
+
+    h4 {
+      margin: .5rem 0 0 0;
+    }
+  }
+
+  .media--description {
+    margin: 0 0 .5rem 0;
+  }
+
+  .media--length {
+    margin: 0 0 .5rem 0;
+  }
 }
