--- a/web/wp-content/themes/deansluyter-theme-2026/sass/config/_variables.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/config/_variables.scss
@@ -23,7 +23,7 @@ $font-choice--base: 'Open Sans', 'Lato', 'Merriweather', Palatino, Times, serif;
 $font-choice--heading: 'Josefin Sans X','Montserrat', Helvetica, Arial, sans-serif;
 
 $font-size--html: 16px;
-$font-size--base: 1em;
+$font-size--base: 1rem;
 
 $font-size--xxs: $font-size--base * .7;
 $font-size--xs: $font-size--base * .8;
