Rest of the ems to rems (aside from the home page header)

--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/_featured-book.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/_featured-book.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 3em;
+  margin-bottom: 3rem;
 
   .book-image {
     width: 34%;
@@ -24,7 +24,7 @@
   .book-links {
     width: 55%;
     // border: 1px dotted red;
-    margin: 2em auto;
+    margin: 2rem auto;
   }
 
   .book-title {
