--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_wp-block-image.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_wp-block-image.scss
@@ -4,10 +4,10 @@ figure {
 
 .wp-block-image {
 
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
 
   figure {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 
     &.alignleft {
       @include block--align-left;
