--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/hc-offcanvas-nav/_theme.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/hc-offcanvas-nav/_theme.scss
@@ -38,7 +38,7 @@ $hc-offcanvas-nav-text-color:                 #fff !default;
 
   a,
   .nav-item {
-    padding: .5em .9em;
+    padding: .5rem .9rem;
     font-size: px-to-rem(20);
     font-family: $font-choice--heading;
     color: rgba($hc-offcanvas-nav-text-color, .85);
