--- a/web/wp-content/themes/deansluyter-theme-2026/sass/base/underscores/_base.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/base/underscores/_base.scss
@@ -47,11 +47,11 @@ hr {
   background-color: #ccc;
   border: 0;
   height: 1px;
-  margin-bottom: 1.5em;
+  margin-bottom: 1.5rem;
 }
 
 ul, ol {
-  margin: 0 0 1.5em 3em;
+  margin: 0 0 1.5rem 3rem;
 }
 
 ul {
@@ -65,7 +65,7 @@ ol {
 li > ul,
 li > ol {
   margin-bottom: 0;
-  margin-left: 1.5em;
+  margin-left: 1.5rem;
 }
 
 dt {
@@ -73,7 +73,7 @@ dt {
 }
 
 dd {
-  margin: 0 1.5em 1.5em;
+  margin: 0 1.5rem 1.5rem;
 }
 
 img {
@@ -84,12 +84,12 @@ img {
 }
 
 figure {
-  margin: 1em 0;
+  margin: 1rem 0;
   /* Extra wide images within figure tags don't overflow the content area. */
 }
 
 table {
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
   width: 100%;
 }
 
@@ -108,7 +108,7 @@ input[type="submit"] {
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 1;
-  padding: .6em 1em .4em;
+  padding: .6rem 1rem .4rem;
 }
 
 button:hover,
@@ -225,12 +225,12 @@ a:hover, a:active {
   float: left;
   position: absolute;
   top: 100%;
-  left: -999em;
+  left: -999rem;
   z-index: 99999;
 }
 
 .main-navigation ul ul ul {
-  left: -999em;
+  left: -999rem;
   top: 0;
 }
 
@@ -264,7 +264,7 @@ a:hover, a:active {
   display: block;
 }
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 37.5rem) {
   .menu-toggle {
     display: none;
   }
@@ -276,7 +276,7 @@ a:hover, a:active {
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
   overflow: hidden;
 }
 
@@ -345,13 +345,13 @@ a:hover, a:active {
 .alignleft {
   display: inline;
   float: left;
-  margin-right: 1.5em;
+  margin-right: 1.5rem;
 }
 
 .alignright {
   display: inline;
   float: right;
-  margin-left: 1.5em;
+  margin-left: 1.5rem;
 }
 
 .aligncenter {
@@ -394,7 +394,7 @@ a:hover, a:active {
 # Widgets
 --------------------------------------------------------------*/
 .widget {
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
   /* Make sure select elements fit in widgets. */
 }
 
@@ -414,7 +414,7 @@ a:hover, a:active {
 
 .post,
 .page {
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
 }
 
 .updated:not(.published) {
@@ -424,12 +424,12 @@ a:hover, a:active {
 .page-content,
 .entry-content,
 .entry-summary {
-  margin: 1.5em 0 0;
+  margin: 1.5rem 0 0;
 }
 
 .page-links {
   clear: both;
-  margin: 0 0 1.5em;
+  margin: 0 0 1.5rem;
 }
 
 /*--------------------------------------------------------------
@@ -486,7 +486,7 @@ object {
 ## Captions
 --------------------------------------------------------------*/
 .wp-caption {
-  margin-bottom: 1.5em;
+  margin-bottom: 1.5rem;
   max-width: 100%;
 }
 
@@ -497,7 +497,7 @@ object {
 }
 
 .wp-caption .wp-caption-text {
-  margin: 0.8075em 0;
+  margin: 0.8075rem 0;
 }
 
 .wp-caption-text {
@@ -508,7 +508,7 @@ object {
 ## Galleries
 --------------------------------------------------------------*/
 .gallery {
-  margin-bottom: 1.5em;
+  margin-bottom: 1.5rem;
 }
 
 .gallery-item {
