--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/_nav.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/_nav.scss
@@ -53,7 +53,7 @@ a.hc-nav-trigger {
       margin-right: 0;
 
       a {
-        padding: .5em;
+        padding: .5rem;
         margin: 0;
         display: block;
         border-bottom: 1px solid rgba($color--primary, .125);
@@ -69,9 +69,9 @@ a.hc-nav-trigger {
 
 #primary-menu > .menu-item > a {
   display: block;
-  padding: .25em .5em;
-  border-radius: .3em;
-  font-size: .95em;
+  padding: .25rem .5rem;
+  border-radius: .3rem;
+  font-size: .95rem;
 
   &:hover {
     background-color: rgba($color--primary, .75);
@@ -83,10 +83,10 @@ a.hc-nav-trigger {
 
   &:after {
     content: "\0025BE";
-    padding-left: .4em;
+    padding-left: .4rem;
   }
 
   &:hover {
-    border-radius: .3em .3em 0 0;
+    border-radius: .3rem .3rem 0 0;
   }
 }
