--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/_related-books.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/_related-books.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 3em;
+  margin-bottom: 3rem;
 
   .book-image {
     width: 23%;
