--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_block--event.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_block--event.scss
@@ -1,10 +1,10 @@
 .event {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1.5em;
+  margin-bottom: 1.5rem;
 
   &--image {
-    margin-bottom: .75em;
+    margin-bottom: .75rem;
 
     img {
       width: 100%;
@@ -17,11 +17,11 @@
   }
 
   &--date h4 {
-    margin: .6em 0 0 0;
+    margin: .6rem 0 0 0;
   }
 
   &--subtitle h4 {
-    margin: .3em 0 0 0;
+    margin: .3rem 0 0 0;
   }
 
   @include breakpoint(600px) {
@@ -36,18 +36,18 @@
       flex: 2;
 
       .inner {
-        padding-left: 1em;
+        padding-left: 1rem;
       }
     }
   }
 
   .info-header {
     background-color: rgba($color--header, .5);
-    padding: .5em;
-    margin-bottom: 1em;
+    padding: .5rem;
+    margin-bottom: 1rem;
   }
 
   .info-body {
-    margin-left: .5em;
+    margin-left: .5rem;
   }
 }
