--- a/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_wp-block-column.scss
+++ b/web/wp-content/themes/deansluyter-theme-2026/sass/components/blocks/_wp-block-column.scss
@@ -1,5 +1,5 @@
 .wp-block-columns {
-  margin: 0 0 1em 0;
+  margin: 0 0 1rem 0;
 }
 
 .wp-block-column {
@@ -25,7 +25,7 @@
   }
 
   &:not(:last-child) {
-    margin-right: 1em;
+    margin-right: 1rem;
   }
 
 }
